...
  /// Retrieves information about the camera such as max resolution and zoom capabilities
  Future<CameraController> initializeCamera() async {
    final cameras = await availableCameras();
    CameraDescription selectedCamera;

    // Choose camera based on the category
    if (widget.category == 'selfie') {
      selectedCamera = cameras.firstWhere(
        (camera) => camera.lensDirection == CameraLensDirection.front,
      );
    } else {
      selectedCamera = cameras.firstWhere(
        (camera) => camera.lensDirection == CameraLensDirection.back,
...
      popupTitle = 'Close-Up Tips';
      popupContent =
          "Focus on Details: Get close to capture intricate details of your subject.\n\n"
          "Experiment: Try different angles and perspectives to find unique shots.\n\n"
          "Lighting: Soft, diffused light works best for close-ups to avoid harsh shadows.\n\n"
          "Stability: Grip all four corners of your phone to stabilize your hands for sharp close-up shots.";
    } else if (widget.category == 'general') {
      // Set popup title and content for 'general' category
      popupTitle = 'General Photography Tips';
      popupContent =
          "Composition: Follow the rule of thirds and use leading lines for interesting compositions.\n\n"
          "Lighting: Understand natural light and use it to enhance your photos.\n\n"
          "Experiment: Try different angles and perspectives to find unique shots.\n\n"
...
              Text(popupContent),
            ],
          ),
        ),
        actions: [
          TextButton(
            key: const Key("close_tips_button"),
            onPressed: () {
              Navigator.of(context).pop();
            },
            child: Text("Close"),
          ),
        ],
...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        actions: [
          IconButton(
            key: const Key("tips_button"),
            onPressed: _showPopup,
            icon: Icon(Icons.info),
          ),
          IconButton(
            key: const Key("flip_camera_button"),
            onPressed: () {
              _toggleCamera();
              // Function to flip camera
            },
            icon: Icon(Icons.flip_camera_ios_rounded),
          ),
          IconButton(
            key: const Key("grid_button"),
            onPressed: () {
              setState(() {
                _showGrid = !_showGrid; // Toggle grid visibility
                _gridKey = UniqueKey(); // Update key to rebuild CustomPaint
              });
            },
            icon: _showGrid ? Icon(Icons.grid_on) : Icon(Icons.grid_off),
          ),
          IconButton(
            key: const Key("leveling_bar_button"),
            onPressed: _toggleLevelingBar,
            icon: Icon(Icons.screen_rotation_outlined),
          ),
          IconButton(
            key: const Key("flash_button"),
            onPressed: () async {
              final controller = await _controllerFuture;

              setState(() {
                switch (_flashMode) {
                  case FlashMode.off:
...
            );
          }
        },
      ),
      floatingActionButtonLocation: FloatingActionButtonLocation.centerFloat,
      floatingActionButton: FloatingActionButton(
        key: const Key("take_picture_button"),
        onPressed: () async {
          final controller = await _controllerFuture;
          await takePicture(controller);
        },
        backgroundColor: Colors.white,
        child: Icon(
...
