...
                  return const Center(child: Text('Image not found'));
                }
              },
            ),
          ),
          ElevatedButton(
            key: const Key("analyze_button"),
            onPressed: () {
              _saveAndNavigate(context);
            },
            style: ElevatedButton.styleFrom(
              backgroundColor:
                  Colors.green, // Set the button background color to green
...
